<resources>
    <string name="app_name">MyFreelance</string>
    <string name="title_home">Inicio</string>
    <string name="title_search">Buscar</string>
    <string name="title_messages">Mensajes</string>
    <string name="title_account">Cuenta</string>
    <string name="Error">Error</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="ya_tienes_una_cuenta">¿Ya tienes una cuenta?</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="clave">Contraseña</string>
    <string name="correo">Correo electrónico</string>
    <string name="direccion">Dirección</string>
    <string name="user">Usuario</string>
    <string name="cel">Teléfono</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="et_titulo">Título del Servicio</string>
    <string name="et_descripcion">Descripción del servicio</string>
    <string name="et_precio">Precio del servicio</string>
    <string name="et_categoria">Categoría</string>
    <string name="bt_publicar">Publicar servicio</string>
    <string name="msg_user_added">Registro exitoso!</string>
    <string name="msg_error">Revisar los datos </string>
    <string name="msg_agregaServicio">Servicio agregado </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Titulo">Titulo</string>
    <string name="Precio">Precio</string>
    <string name="todo">TODO</string>
    <string name="Add">Agregar</string>
    <string name="contacto">Contacto</string>
    <string name="escribe_tu_mensaje">Escribe tu mensaje ...</string>
    <string name="enviar">Enviar</string>
    <string name="imagen">imagen</string>
    <string name="actualizar_datos">Actualizar datos</string>
    <string name="msg_user_updated">Los datos fueron actualizados!</string>
    <string name="atras">Atrás</string>
    <string name="msg_servicio_updated">La publicación fue actualizada!</string>
    <string name="msg_data">Error</string>
</resources>