<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0C1020"
    tools:context=".ui.home.ContactarFragment">


    <TextView
        android:id="@+id/textContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/contacto"
        android:textColor="#5DDADB"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageInteresado"
        android:layout_width="183dp"
        android:layout_height="214dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/imagen"
        android:src="@drawable/interesado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textContacto"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_Mensaje"
        android:layout_width="349dp"
        android:layout_height="156dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/escribe_tu_mensaje"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="textStart"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageInteresado"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonContacto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_style1"
        android:text="@string/enviar"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="615dp"
        app:layout_constraintTop_toBottomOf="@id/et_Mensaje" />


</androidx.constraintlayout.widget.ConstraintLayout>