<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#0C1020"
    tools:context=".ui.home.AddServicioFragment">


    <Button
        android:id="@+id/bt_back_add"
        android:layout_width="106dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
        android:drawablePadding="-30dp"
        android:text="@string/atras"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_categoria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/et_categoria"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageTrabajador" />

    <EditText
        android:id="@+id/et_precio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/et_precio"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageTrabajador" />

    <ImageView
        android:id="@+id/imageTrabajador"
        android:layout_width="180dp"
        android:layout_height="159dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/trabajador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Publicar Servicio"
        android:textColor="#5DDADB"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageTrabajador"
        tools:layout_editor_absoluteY="191dp" />


    <EditText
        android:id="@+id/et_titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/et_titulo"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageTrabajador" />

    <EditText
        android:id="@+id/et_descripcion"
        android:layout_width="296dp"
        android:layout_height="85dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/et_descripcion"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="textStart"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_titulo" />

    <Button
        android:id="@+id/btPublicarServicio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_style1"
        android:text="@string/bt_publicar"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_categoria" />


</androidx.constraintlayout.widget.ConstraintLayout>