<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.proyecto.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_search"
            app:destination="@id/navigation_search" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.proyecto.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_addServicioFragment"
            app:destination="@id/addServicioFragment" />
        <action
            android:id="@+id/action_navigation_search_to_serviceDetail2"
            app:destination="@id/serviceDetail" />
        <argument
            android:name="service"
            app:argType="com.example.proyecto.model.Service" />
        <action
            android:id="@+id/action_navigation_search_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.proyecto.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" >


        <action
            android:id="@+id/action_navigation_account_to_navigation_home"
            app:destination="@id/navigation_home" />
        <argument android:name="user"
            app:argType="com.example.proyecto.model.User"/>
        <action
            android:id="@+id/action_navigation_account_to_login"
            app:destination="@id/login" />
    </fragment>
    <fragment
        android:id="@+id/login"
        android:name="com.example.proyecto.Login"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
    <fragment
        android:id="@+id/addServicioFragment"
        android:name="com.example.proyecto.ui.home.AddServicioFragment"
        android:label="fragment_add_servicio"
        tools:layout="@layout/fragment_add_servicio" >
        <action
            android:id="@+id/action_addServicioFragment_to_navigation_search"
            app:destination="@id/navigation_search" />
    </fragment>
    <fragment
        android:id="@+id/serviceDetail"
        android:name="com.example.proyecto.ServiceDetail"
        android:label="fragment_service_detail"
        tools:layout="@layout/fragment_service_detail" >
        <action
            android:id="@+id/action_serviceDetail_to_navigation_search"
            app:destination="@id/navigation_search" />
        <action
            android:id="@+id/action_serviceDetail_to_contactarFragment"
            app:destination="@id/contactarFragment" />
        <action
            android:id="@+id/action_serviceDetail_to_reporteFragment"
            app:destination="@id/reporteFragment" />

        <argument android:name="Service"
            app:argType="com.example.proyecto.model.Service"/>

    </fragment>
    <fragment
        android:id="@+id/reporteFragment"
        android:name="com.example.proyecto.ui.home.ReporteFragment"
        android:label="fragment_reporte"
        tools:layout="@layout/fragment_reporte" >
        <action
            android:id="@+id/action_reporteFragment_to_serviceDetail"
            app:destination="@id/serviceDetail" />
    </fragment>
    <fragment
        android:id="@+id/contactarFragment"
        android:name="com.example.proyecto.ui.home.ContactarFragment"
        android:label="fragment_contactar"
        tools:layout="@layout/fragment_contactar" >
        <action
            android:id="@+id/action_contactarFragment_to_serviceDetail"
            app:destination="@id/serviceDetail" />
    </fragment>
</navigation>